// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`Datasource sqlserver > Kysely raw queries > 02. basicQuery with params 1`] = `
{
  "data": [
    {
      "one": 1,
    },
  ],
  "meta": {
    "affectedRows": 1,
    "query": {
      "params": [
        1,
        "Hello",
      ],
      "sql": "
          SELECT 1 as one
          WHERE 1 = @1
          AND 'Hello' like @2
      ",
    },
    "timeMs": 0.1,
  },
}
`;

exports[`Datasource sqlserver > Kysely select queries > get some brands 1`] = `
{
  "data": [],
  "meta": {
    "affectedRows": 0,
    "query": {
      "params": [],
      "sql": "select "b"."id", "b"."name" from "brand" as "b"",
    },
    "timeMs": 0.1,
  },
}
`;

exports[`Datasource sqlserver > Kysely select queries > upsert a brand 1`] = `
{
  "data": [],
  "meta": {
    "affectedRows": 0,
    "query": {
      "params": [
        "Brand 1",
        2024-10-17T21:57:22.145Z,
        "Brand 1",
        2024-10-17T21:57:22.145Z,
      ],
      "sql": "merge into "brand" as "Target" using "brand" as "Source" on "Target"."id" = "Source"."id" when matched then update set "name" = @1, "updated_at" = @2 when not matched then insert ("name", "created_at") values (@3, @4) output "inserted"."id", "inserted"."name", "inserted"."flag_active";",
    },
    "timeMs": 0.1,
  },
}
`;
